package vo

abstract class Enemy
