package com.github.itmosoftwaredesign.roguelike.utils.vo

/**
 * Положение объекта на карте уровня
 */
data class Position(var x: Int, var y: Int)
